# CUDAlts_playground

./: CMakeLists.txt  README.md  build_and_run.sh  makefile
libreCUDA/: CMakeLists.txt  build_and_run.sh  makefile
libreCUDA/src/: kahan_sum.cu  main.cpp
